pushing 2nd prototype of the agent including working Dockerfile and requirements

--- a/src/app_baseball_agent/pyproject.toml
+++ b/src/app_baseball_agent/pyproject.toml
@@ -16,6 +16,9 @@ llama-index-embeddings-azure-openai = "^0.2.5"
 psycopg2-binary = "^2.9.10"
 fastapi = "^0.115.5"
 python-dotenv = "^1.0.1"
+llama-index-tools-azure-code-interpreter = "^0.3.0"
+az-cli = "^0.5"
+ollama = "^0.3.3"
 
 
 [build-system]
