--- a/azure.yaml
+++ b/azure.yaml
@@ -3,6 +3,18 @@
 name: stats-data-demo
 metadata:
   template: stats-data-demo@0.0.1
+hooks:
+  postdeploy:
+    windows:
+      shell: pwsh
+      run: ./scripts/postdeploy.ps1
+      interactive: true
+      continueOnError: false
+    posix:
+      shell: sh
+      run: ./scripts/postdeploy.sh
+      interactive: true
+      continueOnError: false  
 services:
   uploaddata:
     project: ./src/function_upload_data
