--- a/src/function_orchestrate_ingest/requirements.txt
+++ b/src/function_orchestrate_ingest/requirements.txt
@@ -2,6 +2,7 @@ anyio==4.6.2.post1
 asyncpg==0.30.0
 azure-core==1.32.0
 azure-eventhub==5.13.0
+azure-identity==1.19.0
 azure-functions==1.21.3
 azure-functions-durable==1.2.10
 azure-storage-blob==12.24.0
@@ -19,6 +20,7 @@ numpy==2.1.3
 pandas==2.2.3
 pycparser==2.22 
 python-dateutil==2.9.0.post0 
+psycopg2-binary==2.9.10
 pytz==2024.2 
 requests==2.32.3 
 six==1.16.0 
